Improved bibliography and further enhancements on the content of the doument

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -40,14 +40,21 @@
     Date-Added = {2011-01-15 17:11:03 +0200},
     Date-Modified = {2011-01-15 15:17:44 +0200},
     Title = {{U}sability {A}nalysis and {I}nterface {I}mprovement of the {E}nd to {E}nd {V}erifiable {R}emote-Electronic {V}oting {S}ystem {H}elios},
-    Year = {2010}}
-   
-@article{PED91,
-    Author = {PEDERSEN, Torben},
-    Date-Added = {2011-01-16 17:11:03 +0200},
-    Date-Modified = {2011-01-16 15:17:44 +0200},
-    Title = {A {T}hreshold {C}ryptosystem without a {T}rusted {P}arty},
-    Year = {1991}}
+    Year = {2010}}   
+    
+@incollection{PED91,
+	year={1991},
+	isbn={978-3-540-54620-7},
+	booktitle={Advances in Cryptology — EUROCRYPT ’91},
+	volume={547},
+	series={Lecture Notes in Computer Science},
+	doi={10.1007/3-540-46416-6_47},
+	title={A Threshold Cryptosystem without a Trusted Party},
+	url={http://dx.doi.org/10.1007/3-540-46416-6_47},
+	publisher={Springer Berlin Heidelberg},
+	author={PEDERSEN, Torben Pryds},
+	pages={522-526},
+}
 
 @article{RJA02,
     Author = {RJASKOVA, Zuzana},
@@ -56,12 +63,20 @@
     Title = {Electronic {V}oting {S}chemes},
     Year = {2002}}
 
-@article{SCH91,
-    Author = {SCHNORR, Peter},
-    Date-Added = {2010-06-12 21:25:00 +0200},
-    Date-Modified = {2010-06-12 21:25:00 +0200},
-    Title = {Efficient {S}ignature {G}eneration by {S}mart {C}ards},
-    Year = {1991}}
+@article{Schnorr91,
+	year={1991},
+	issn={0933-2790},
+	journal={Journal of Cryptology},
+	volume={4},
+	issue={3},
+	doi={10.1007/BF00196725},
+	title={Efficient signature generation by smart cards},
+	url={http://dx.doi.org/10.1007/BF00196725},
+	publisher={Springer-Verlag},
+	keywords={Digital signatures; Public-key signatures; Public-key authentication; ElGamal signatures; Discrete logarithm one-way function; Signatures with preprocessing; Random exponentiated residues},
+	Author = {SCHNORR, Claus Peter},
+	pages={161-174},
+}
 
 @article{SCHW07,
     Author = {SCHWEISGUT, Jörn},
@@ -69,14 +84,28 @@
     Date-Modified = {2010-06-12 21:25:00 +0200},
     Title = {Elektronische {W}ahlen unter dem {E}insatz kryptografischer {O}bserver},
     Year = {2007}}
-   
-@article{SHA79,
-    Author = {SHAMIR, Adi},
-    Date-Added = {2010-06-13 17:11:03 +0200},
-    Date-Modified = {2010-06-13 15:17:44 +0200},
-    Title = {How to share a secret},
-    Year = {1979}}
-   
+
+@article{Shamir79,
+	Author = {SHAMIR, Adi},
+	title = {How to share a secret},
+	journal = {Commun. ACM},
+	issue_date = {Nov. 1979},
+	volume = {22},
+	number = {11},
+	month = nov,
+	year = {1979},
+	issn = {0001-0782},
+	pages = {612--613},
+	numpages = {2},
+	url = {http://doi.acm.org/10.1145/359168.359176},
+	doi = {10.1145/359168.359176},
+	acmid = {359176},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {cryptography, interpolation, key management},
+} 
+
+
 @article{WEB06,
     Author = {WEBER, Stefan},
     Date-Added = {2010-06-12 21:25:00 +0200},
@@ -113,13 +142,22 @@
     Lastchecked = {2011-11-26},
     Url = {http://heliosvoting.org/}}
 
-@article{CP93,
-    Author = {CHAUM, David and PEDERSEN, Torben},
-    Date-Added = {2011-01-18 21:25:00 +0200},
-    Date-Modified = {2011-01-18 21:25:00 +0200},
-    Title = {Wallet databases with observers},
-    Year = {1993}}
-   
+
+@incollection{CP93,
+	year={1993},
+	isbn={978-3-540-57340-1},
+	booktitle={Advances in Cryptology — CRYPTO’ 92},
+	volume={740},
+	series={Lecture Notes in Computer Science},
+	doi={10.1007/3-540-48071-4_7},
+	title={Wallet Databases with Observers},
+	url={http://dx.doi.org/10.1007/3-540-48071-4_7},
+	publisher={Springer Berlin Heidelberg},
+	Author = {CHAUM, David and PEDERSEN, Torben Pryds},
+	pages={89-105},
+}
+
+
 @article{PET05,
     Author = {PETERS, R. A.},
     Date-Added = {2011-01-21 21:25:00 +0200},
@@ -150,40 +188,93 @@
     Title = {{A}nonymous voting by two-round public discussion},
     Year = {2010}}  
     
-@article{HKRS12,
-    Author = {KHADER, Dalia and HAO, Feng and RYAN, Peter Y. A. and SMYTH, Ben},
-    Date-Added = {2012-09-22 21:25:00 +0200},
-    Date-Modified = {2012-09-22 21:25:00 +0200},
-    Title = {{A} {F}air and {R}obust {V}oting {S}ystem by {B}roadcast},
-    Year = {2012}}  
-    
-@article{CGS97,
-    Author = {CRAMER, Ronald and GENNARO, Rosario and SCHOENMAKERS, Berry},
-    Date-Added = {2010-05-22 17:11:03 +0200},
-    Date-Modified = {2010-05-24 15:17:44 +0200},
-    Title = {A {S}ecure and {O}ptimally {E}fficient {M}ulti-{A}uthority {E}lection {S}cheme},
-    Year = {1997}}
-    
+@inproceedings{HKRS12,
+	Author = {KHADER, Dalia and HAO, Feng and RYAN, Peter Y. A. and SMYTH, Ben},
+	title = {A Fair and Robust Voting System by Broadcast},
+	year = {2012},
+	booktitle = {EVOTE'12: 5th International Conference on Electronic Voting},
+	note = "To appear."
+}
+
+@incollection{CGS97,
+	year={1997},
+	isbn={978-3-540-62975-7},
+	booktitle={Advances in Cryptology — EUROCRYPT ’97},
+	volume={1233},
+	series={Lecture Notes in Computer Science},
+	doi={10.1007/3-540-69053-0_9},
+	title={A Secure and Optimally Efficient Multi-Authority Election Scheme},
+	url={http://dx.doi.org/10.1007/3-540-69053-0_9},
+	publisher={Springer Berlin Heidelberg},
+	Author = {CRAMER, Ronald and GENNARO, Rosario and SCHOENMAKERS, Berry},
+	pages={103-118},
+}
+        
 @article{EG84,
 	Author = {EL GAMAL, Taher},
-    Date-Added = {2013-03-02 17:11:03 +0200},
-    Date-Modified = {2013-03-02 17:11:03 +0200},
-    Title = {A public key cryptosystem and a signature scheme based on discrete logarithms},
-    Year = {1984}}
+	journal={Information Theory, IEEE Transactions on}, 
+	title={A public key cryptosystem and a signature scheme based on discrete logarithms}, 
+	year={1985}, 
+	volume={31}, 
+	number={4}, 
+	pages={469-472}, 
+	keywords={Cryptography;Logarithmic arithmetic;Digital signatures;Galois fields;Helium;Information security;Information systems;Milling machines;Public key;Public key cryptography}, 
+	doi={10.1109/TIT.1985.1057074}, 
+	ISSN={0018-9448},}
     
-@article{ritter13a,
-	Author = {RITTER, Juerg},
-    Date-Added = {2013-03-03 17:11:03 +0200},
-    Date-Modified = {2013-03-03 17:11:03 +0200},
-    Title = {InstaCircle -- A Location-Bound Ad-Hoc Network for Android Devices},
-    Year = {2013}}
+@techreport{ritter13a,
+     title = {InstaCircle -- A Location-Bound Ad-Hoc Network for Android Devices},
+     author = {RITTER, Juerg},
+     institution = {Bern University of Applied Sciences, Engineering and Information Technology},
+     group = {E-Voting Group},
+     year = {2013},
+     month = {02},
+}
     
-@article{ritter12,
-	Author = {RITTER, Juerg},
-    Date-Added = {2013-03-03 17:11:03 +0200},
-    Date-Modified = {2013-03-03 17:11:03 +0200},
-    Title = {UniCrypt -- A Cryptographic Library Implemented in Java},
-    Year = {2012}}
+@techreport{ritter12,
+     title = {UniCrypt -- A Cryptographic Library Implemented in Java},
+     author = {RITTER, Juerg},
+     institution = {Bern University of Applied Sciences, Engineering and Information Technology},
+     group = {E-Voting Group},
+     year = {2012},
+     month = {06},
+}
+    
+@article{Gol02,
+    author = {Oded Goldreich},
+    title = {Zero-Knowledge twenty years after its invention},
+    institution = {Electronic Colloquium on Computational Complexity (http://www.eccc.uni-trier.de/eccc/), Report No},
+    year = {2002}
+}
+
+@incollection{Maurer09,
+	year={2009},
+	isbn={978-3-642-02383-5},
+	booktitle={Progress in Cryptology – AFRICACRYPT 2009},
+	volume={5580},
+	series={Lecture Notes in Computer Science},
+	doi={10.1007/978-3-642-02384-2_17},
+	title={Unifying Zero-Knowledge Proofs of Knowledge},
+	url={http://dx.doi.org/10.1007/978-3-642-02384-2_17},
+	publisher={Springer Berlin Heidelberg},
+	author={MAURER, Ueli},
+	pages={272-286}
+}
+
+@incollection{FS87,
+	year={1987},
+	isbn={978-3-540-18047-0},
+	booktitle={Advances in Cryptology — CRYPTO’ 86},
+	volume={263},
+	series={Lecture Notes in Computer Science},
+	doi={10.1007/3-540-47721-7_12},
+	title={How To Prove Yourself: Practical Solutions to Identification and Signature Problems},
+	url={http://dx.doi.org/10.1007/3-540-47721-7_12},
+	publisher={Springer Berlin Heidelberg},
+	Author = {FIAT, Amos and SHAMIR, Adi}, 
+	pages={186-194},
+}
+	
     
 @webpage{BouncyCastle,
     Date-Added = {2012-02-27 15:00:00 +0200},
